trunk/Archive2/be/5b6393186ffe1c/output
main.cpp:9:18: error: invalid digit '9' in octal constant
    int month = 09 ; // *** error: 9 is not an octal digit; valid octal digits are 0, 1, ... 7 
                 ^
1 error generated.
===========
main.cpp:9:17: error: invalid digit "9" in octal constant
     int month = 09 ; // *** error: 9 is not an octal digit; valid octal digits are 0, 1, ... 7 
                 ^
main.cpp: In function 'int main()':
main.cpp:5:10: warning: unused variable '_' [-Wunused-variable]
     char _ = 'a' ; // can an identifier be just an underscore? yes
          ^
main.cpp:7:11: warning: unused variable 'Float' [-Wunused-variable]
     float Float = 3.14f ; // fine. case-sensitive; float and Float are different
           ^
main.cpp:9:9: warning: unused variable 'month' [-Wunused-variable]
     int month = 09 ; // *** error: 9 is not an octal digit; valid octal digits are 0, 1, ... 7 
         ^
