trunk/Archive2/be/5b6393186ffe1c/main.cpp
#include <iostream>

int main()
{
    char _ = 'a' ; // can an identifier be just an underscore? yes
    
    float Float = 3.14f ; // fine. case-sensitive; float and Float are different
    
    int month = 09 ; // *** error: 9 is not an octal digit; valid octal digits are 0, 1, ... 7 
}
